@@ -49,8 +49,16 @@ GSWeb_GSWBUNDLE_LIBS =
 GSWBUNDLE_INSTALL = $(BUNDLE_NAME)
 GSWBUNDLE_INSTALL_DIR = $(GNUSTEP_LIBRARIES_ROOT)/gsweb
 
-# Use .gdladaptor as the bundle extension
-GSWBUNDLE_EXTENSION = .framework
+# Determine the bundle directory extension
+ifeq ($(profile), yes)
+  GSWBUNDLE_EXTENSION = .frameworkp
+else
+  ifeq ($(debug), yes)
+    GSWBUNDLE_EXTENSION = .frameworkd
+  else
+    GSWBUNDLE_EXTENSION = .framework
+  endif
+endif
 
 # The Bundle Objective-C source files to be compiled
 GSWeb_OBJC_FILES = \
